feat(article): rating an article functionality
- Add validation file for rating
- Create rating model and association
- Middleware for checking if article exists

[Finishes #164198495]
