# server/routes/articles.js
@@ -2,6 +2,8 @@ import express from 'express';
 import { ArticleController, Comment } from '../controllers';
 import createArticleValidation from '../validations/create-article';
 import AuthenticateUser from '../middlewares/AuthenticateUser';
+import rateArticleValidation from '../validations/rate-article';
+import AuthenticateArticle from '../middlewares/AuthenticateArticle';
 
 const router = express.Router();
 
@@ -16,5 +18,15 @@ router.post('/articles/:slug/comment', AuthenticateUser.verifyUser, Comment.post
 router.get('/articles/tags',
   controller.getTags.bind(controller));
 router.get('/articles', controller.getAll.bind(controller));
+
+router.post('/articles/rating/:slug',
+  AuthenticateUser.verifyUser,
+  rateArticleValidation, // Validate user input
+  AuthenticateArticle.verifyArticle,
+  controller.rateArticle.bind(controller));
+
+router.get('/articles/rating/:slug',
+  AuthenticateArticle.verifyArticle,
+  controller.getRatings.bind(controller));
 
 export default router;
